ready for project 2

--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -2,5 +2,5 @@ server.port=8761
 spring.application.name=ms-registry-discovery-server
 
 #connect config client to config server localhost:8888
-spring.config.import=configserver:http://configserver:8888/
-
+#spring.config.import=optional:configserver:http://localhost:8888/
+spring.config.import=optional:http://localhost:8888/
