--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.5.1</version>
             </plugin>
         </plugins>
     </build>
