--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -3,6 +3,6 @@ spring.application.name=ms-registry-discovery-server
 
 #connect config client to config server localhost:8888
 #spring.config.import=optional:configserver:http://localhost:8888/
-spring.config.import=optional:configserver:https://lel-config-server.azurewebsites.net:443/ms-product/default
+spring.config.import=optional:configserver:https://lel-config-server.azurewebsites.net:443
 
 
